rds-sg.tf
resource "aws_security_group" "allow_tls_rds" {
  name        = "alb-sg"
  description = "Allow TLS inbound traffic and all outbound traffic"
  vpc_id      = aws_vpc.two-tier-vpc.id

  tags = {
    Name = "allow_tls_alb"
  }
}

#inbound rules
resource "aws_vpc_security_group_ingress_rule" "allow_http_rds" {
  security_group_id = aws_security_group.allow_tls_rds.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 3306
  ip_protocol       = "tcp"
  to_port           = 3306
  description = "allow HTTP"
}

#outbound rules
resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4_rds" {
  security_group_id = aws_security_group.allow_tls_rds.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
